# drf-shopping

./: README.md  client.html  pyproject.toml
core/: settings.py  urls.py
shopping_list/: __init__.py  admin.py  models.py  urls.py
shopping_list/api/: permissions.py  serializers.py  views.py  viewsets.py
shopping_list/fixtures/: inti_shopping_list_with_items.json
shopping_list/migrations/: 0001_initial.py  0002_shoppinglist_members.py  0003_shoppinglist_last_interaction.py
shopping_list/tests/: conftest.py  tests.py
