[project]
name = "drf-shopping"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (==5.2.1)",
    "djangorestframework (==3.15.2)",
    "pytest (==8.3.5)",
    "pytest-django (==4.8.0)",
    "pytest-cov (==6.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
